issue #25: fill modal data by ajax and adjustments

--- a/SIGS/app/views/rooms/show.html.erb
+++ b/SIGS/app/views/rooms/show.html.erb
@@ -47,9 +47,17 @@
   %>
     <p class="dataAllocation" data-day="<%= allocation.day %>" data-hour="<%= start_time %>" data-rowspan="<%= rowspan %>">
       <%= allocation.school_room.discipline.name %>
-        <a href="#!" class="openModal" data-school-room="<%= allocation.school_room.id %>" data-courses="<% allocation.school_room.courses.each do |course| %><%= (course == allocation.school_room.courses.last ? course.name : "#{course.name}") %><% end %>" data-discipline="<%= allocation.school_room.discipline.name %>" data-vacancies="<%= allocation.school_room.vacancies %>" data-department="<%= allocation.school_room.discipline.department.name %>">
-          <small>Turma: <%= allocation.school_room.name %></small>
-        </a>
+      <a href="#!" class="openModal" data-school-room="<%= allocation.school_room.id %>" data-courses="<% allocation.school_room.courses.each do |course| %><%= (course == allocation.school_room.courses.last ? course.name : "#{course.name}") %><% end %>" data-discipline="<%= allocation.school_room.discipline.name %>" data-vacancies="<%= allocation.school_room.vacancies %>" data-department="<%= allocation.school_room.discipline.department.name %>">
+        <small>Turma: <%= allocation.school_room.name %></small>
+      </a>
+      <% unless allocation.school_room.category.empty? %>
+        <ul class="list-group listResources" data-day-hour="<%= "#{allocation.day}#{start_time}" %>">
+          <li class="list-group-item"><h4>Recursos:</h4></li>
+          <% allocation.school_room.category.each do |cat| %>
+            <li class="list-group-item"><%= cat.name %></li>
+          <% end %>
+        </ul>
+      <% end %>
     </p>
   <% end %>
 </div>
@@ -78,12 +86,7 @@
           <li class="list-group-item" id="itemDepartment"></li>
           <li class="list-group-item" id="itemVacancies"></li>
         </ul>
-        <ul class="list-group listResources">
-          <li class="list-group-item"><h4>Recursos:</h4></li>
-          <li class="list-group-item">Sala de informática</li>
-          <li class="list-group-item">Ar condicionado</li>
-        </ul>
-        <table class="table table-striped">
+        <table class="table table-striped tableModalSchoolRoom">
           <thead>
             <tr>
               <th>Horário</th>
@@ -91,23 +94,7 @@
               <th>Sala</th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
-              <td>16:00</td>
-              <td>Segunda</td>
-              <td>Superior 10</td>
-            </tr>
-            <tr>
-              <td>16:00</td>
-              <td>Quarta</td>
-              <td>Superior 10</td>
-            </tr>
-            <tr>
-              <td>14:00</td>
-              <td>Sexta</td>
-              <td>Inferior 9</td>
-            </tr>
-          </tbody>
+          <tbody></tbody>
         </table>
       </div>
       <div class="modal-footer">
@@ -120,31 +107,51 @@
 <script type="text/javascript">
   $(document).ready(function() {
     $('.dataAllocation').each(function() {
-      var day = $(this).attr("data-day");
-      var hour = $(this).attr("data-hour");
-      var rowspan = $(this).attr("data-rowspan");
-      $(this).appendTo('.tableViewAllocation td[data-day-hour="' + day + hour + '"]').find('a').appendTo('.tableViewAllocation td[data-day-hour="' + day + hour + '"]');
-      if (rowspan > 1 ) {
-        $('.tableViewAllocation td[data-day-hour="' + day + hour + '"]').attr("rowspan", rowspan);
-        for (i = 1; i < rowspan; i++) {
-          var finalHour = parseInt(hour) + i;
-          $('.tableViewAllocation td[data-day-hour="' + day + finalHour + '"]').remove();
+      var dataAllocation = $(this);
+      var day = dataAllocation.attr("data-day");
+      var hour = dataAllocation.attr("data-hour");
+      var rowspan = dataAllocation.attr("data-rowspan");
+      var tdMatching = $('.tableViewAllocation td[data-day-hour="' + day + hour + '"]');
+      if (tdMatching.is(':empty')) {
+        dataAllocation.appendTo(tdMatching).find('a').appendTo(tdMatching);
+        if (rowspan > 1 ) {
+          tdMatching.attr("rowspan", rowspan);
+          for (i = 1; i < rowspan; i++) {
+            var finalHour = parseInt(hour) + i;
+            $('.tableViewAllocation td[data-day-hour="' + day + finalHour + '"]').remove();
+          }
         }
+      } else {
+        (tdMatching).append(' | ');
+        dataAllocation.find('a').appendTo(tdMatching);
       }
     });
     $('.openModal').on('click', function() {
       var school_room_id = $(this).attr('data-school-room');
+      var hourDay = $(this).parent().attr('data-day-hour');
       $('#schoolRoomTitle').text($(this).find('small').text());
       $('#itemCourse').text('Curso: ' + $(this).attr('data-courses'));
       $('#itemDepartment').text('Departamento: ' + $(this).attr('data-department'));
       $('#itemDiscipline').text('Disciplina: ' + $(this).attr('data-discipline'));
       $('#itemVacancies').text('vagas: ' + $(this).attr('data-vacancies'));
-      // $.getJSON(
-      //   url,
-      //   { format: "json" },
-      //   function(data) {
-      //   }
-      // );
+      $('.listResources[data-day-hour="' + hourDay + '"]').appendTo('#modalSchollRoom .modal-body');
+      $.getJSON(
+        '<%= request.base_url %>/rooms/json_of_categories_by_school_room?school_room_id=' + school_room_id,
+        { format: "json" },
+        function(data) {
+          $('.tableModalSchoolRoom tbody').empty()
+          $(data).each(function(i, d) {
+            var startTime = d.start_time.split('T');
+            var startTime = startTime[1].split(':');
+            var hourStart = startTime[0];
+            var finalTime = d.final_time.split('T');
+            var finalTime = finalTime[1].split(':');
+            var hourFinal = finalTime[0];
+            var tr = '<tr><td>' + hourStart + ':00 - ' + hourFinal + ':00</td><td>' + d.day + '</td><td>' + d.room_id + ' (id)</td></tr>';
+            $(tr).appendTo('.tableModalSchoolRoom tbody');
+          });
+        }
+      );
       $('#modalSchollRoom').modal('show');
     });
   });
