--- a/SIGS/app/assets/stylesheets/rooms.scss
+++ b/SIGS/app/assets/stylesheets/rooms.scss
@@ -6,3 +6,13 @@
   text-align: center;
   vertical-align: middle !important;
 }
+
+.tdHover {
+  background-color: #E3F4E3;
+}
+
+.tableViewAllocation tbody td {
+  -webkit-transition: background-color 600ms linear;
+  -ms-transition: background-color 600ms linear;
+  transition: background-color 600ms linear;
+}
