issue #51: apply ihc in view

--- a/SIGS/app/assets/stylesheets/style.scss
+++ b/SIGS/app/assets/stylesheets/style.scss
@@ -104,6 +104,13 @@
 //   max-width: 200px;
 // }
 
+.far-room {
+  background-color: #ffb3b3;
+}
+
+.near-room {
+  background-color: #99ff99;
+}
 
 /* Fontes */
 @font-face {
