--- a/SIGS/app/views/solicitations/adjustment_period.html.erb
+++ b/SIGS/app/views/solicitations/adjustment_period.html.erb
@@ -5,6 +5,7 @@
 
 <%= form_for :solicitation, url: save_adjustment_period_path do |f| %>
   <%= f.hidden_field :school_room_id, value: params[:school_room_id], readonly: true %>
+  <%= f.hidden_field :wing, value: @wing, readonly: true %>
 
   <%= f.label :justify, 'Justificativa:' %>
   <%= f.text_area :justify, class: 'form-control' %>
@@ -43,7 +44,7 @@
     table += "</tr>";
     week = ["segunda", "terca","quarta","quinta","sexta", "sabado"]
 
-    period = <%= @shift %>;
+    period = <%= @school_room.courses[0].shift %>;
     start = (period == 1) ? 6 : 18
     final = (period == 1) ? 18 : 24
     for (var row = start; row < final; row++) {
@@ -69,7 +70,7 @@
         if ($(this).is(":checked")){
           $("#rooms-list #department_rooms_" + $(this).val()).remove();
           ajaxReloadRooms($(this).val());
-        } 
+        }
       });
     });
   });
@@ -96,6 +97,7 @@
 
   function listDepartmentRooms(department_id, data) {
     var list = "<div id='department_rooms_" + department_id + "'>";
+
     list += "<h2>" + data[0][2].name + "</h2><table class='table'>";
     list += "<tr>" +
       "<th></th>" +
@@ -103,18 +105,58 @@
       "<th>Prédio</th>" +
       "<th>Ala</th>" +
       "<th>Capacidade</th>" +
+      "<th>Recursos</th>" +
+      "<th></th>" +
       "</tr>";
     for(var i = 0; i < data.length; i++) {
-      list += "<tr><td><input type='checkbox' name='rooms[]' value='" +
+      var far = "near-room";
+      if ($("#solicitation_wing").val() != data[i][1].wing) {
+        console.log($("#solicitation_wing").val())
+        far = "far-room";
+      }
+
+      list += "<tr class='" + far + "'><td><input type='checkbox' name='rooms[]' value='" +
         data[i][0].id + "'></td>" +
         "<td>" + data[i][0].name + "</td>" +
         "<td>" + data[i][1].name + "</td>" +
         "<td>" + data[i][1].wing + "</td>" +
-        "<td>" + data[i][0].capacity + "</td>" +
-        "</tr>";
+        "<td>" + data[i][0].capacity + "</td><td>";
+        var broken = false;
+        for(var j = 0; j < data[i][3].length; j++){
+          list +=  data[i][3][j].name + "<br>";
+        }
+        list +=  "</td><td>";
+        if(!containsCategory(data[i][3]))
+          list += '<a href="#" data-toggle="tooltip" data-placement="top" title="Não possui todos os recursos"><span class="glyphicon glyphicon-exclamation-sign"></span></a>';
+        list += "</td></tr>";
     }
     list += "</table></div>";
     $("#rooms-list").append(list);
+  }
+
+  function containsCategory(room_categories) {
+    var categories = $("#school_room_ressources").html().trim().split('<br>');
+    
+    if(categories.length == 1 && categories[0] == "") {
+      return true;
+    }
+
+    for(var j = 0; j < categories.length; j++){
+      var exists = false;
+      for (var i = 0; i < room_categories.length; i++) {
+        if(categories[j].includes(room_categories[i].name)){
+          console.log("existe " + room_categories[i].name + " " + categories[j]);
+          exists = true;
+          break;
+        }
+      }
+
+      if(!exists) {
+        return false;
+      }
+
+    }
+    return true;
   }
 
 </script>
