--- a/SIGS/app/views/users/show.html.erb
+++ b/SIGS/app/views/users/show.html.erb
@@ -3,8 +3,8 @@
    <% when 1 %>
    <%= render partial: "users/coordinators_show",
         locals: {user: @user} %>
-   <% when 2 %>
-   <%= render partial: "users/department_assistants_show",
+   <%# when 2 %>
+   <%#= render partial: "users/department_assistants_show",
         locals: {user: @user} %>
     <% when 3 %>
     <%= render partial: "users/administrative_assistants_show",
