--- a/SIGS/app/views/users/show.html.erb
+++ b/SIGS/app/views/users/show.html.erb
@@ -1,12 +1,12 @@
 <h1> <%= @user.name  %></h1>
   <% case permission[:level]%>
+   <% when 0 %>
+   <%= render partial: "users/degs_show",
+        locals: {user: @user} %>
    <% when 1 %>
    <%= render partial: "users/coordinators_show",
         locals: {user: @user} %>
-   <%# when 2 %>
-   <%#= render partial: "users/department_assistants_show",
-        locals: {user: @user} %>
-    <% when 3 %>
+    <% when 2 %>
     <%= render partial: "users/administrative_assistants_show",
          locals: {user: @user} %>
     <% end %>
