Finish implement of deg user

--- a/SIGS/app/views/users/new.html.erb
+++ b/SIGS/app/views/users/new.html.erb
@@ -37,8 +37,8 @@
             <label>Assistente Administrativo</label>
           </div>
           <div class="radioButton">
-            <input type="radio" name="type" value="deg" id="deg">
-            <label>Deg</label>
+            <input type="radio" name="type" value="deg" id="deg_user">
+            <label>DEG</label>
           </div>
           <div class="radioButton">
             <input type="radio" name="type" value="coordinator" id="coord">
