issue #52: Implement view of destroy allocation and update school_rooms view
Signed-off-by: Wallacy Braz <wallacy.braz@live.com>
Signed-off-by: Matias0422 <leguenta@hotmail.com>

--- a/SIGS/app/assets/stylesheets/allocation.scss
+++ b/SIGS/app/assets/stylesheets/allocation.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the allocation controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.button_to {
+  width: 100px;
+  height: 50px;
+  border-bottom: 10px;
+
+}
