--- a/SIGS/app/views/school_rooms/index.html.erb
+++ b/SIGS/app/views/school_rooms/index.html.erb
@@ -25,12 +25,11 @@
       <th>Turma</th>
       <th>Cursos</th>
       <th>Nº de Vagas</th>
-      <% if permission[:level] == 1 %>
         <th style="text-align:center">Alocar</th>
         <th style="text-align:center">Solicitar Alocação</th>
+        <th style="text-align:center">Desalocar</th>
         <th style="text-align:center">Alterar</th>
         <th style="text-align:center">Excluir</th>
-      <% end %>
     </tr>
     <% @my_school_rooms.each do |school_room| %>
       <tr>
@@ -42,12 +41,11 @@
           <% end %>
         <td><%= school_room.vacancies %></td>
         </td>
-        <% if permission[:level] == 1 %>
           <td style="text-align:center"><%= link_to image_tag("icon_alloc.png"), allocations_new_path(school_room.id) %></td>
           <td style="text-align:center"><%= link_to image_tag("icon_request_alloc.png"), allocation_period_path(school_room.id) %></td>
+          <td style="text-align:center"><%= link_to image_tag("icon_alloc_red.png"), allocations_destroy_path(school_room.id) %></td>
           <td style="text-align:center"><%= link_to image_tag("icon_edit.png"), school_rooms_edit_path(school_room.id) %></td>
           <td style="text-align:center"><%= link_to image_tag("icon_trash.png"), destroy_school_room_path(school_room.id), data: {confirm: "Esta ação não poderá mais ser desfeita. Tem certeza que deseja continuar?"} %></td>
-        <% end %>
         </td>
       </tr>
     <% end %>
