--- a/SIGS/app/views/school_rooms/index.html.erb
+++ b/SIGS/app/views/school_rooms/index.html.erb
@@ -22,6 +22,7 @@
       <th>Cursos</th>
       <th>Nº de Vagas</th>
       <th style="text-align:center">Alocar</th>
+      <th style="text-align:center">Desalocar</th>
       <th style="text-align:center">Alterar</th>
       <th style="text-align:center">Excluir</th>
     </tr>
@@ -36,6 +37,7 @@
         <td><%= school_room.vacancies %></td>
         </td>
         <td style="text-align:center"><%= link_to image_tag("icon_alloc.png"), allocations_new_path(school_room.id) %></td>
+        <td style="text-align:center"><%= link_to image_tag("icon_alloc_red.png"), allocations_destroy_path(school_room.id) %></td>
         <td style="text-align:center"><%= link_to image_tag("icon_edit.png"), school_rooms_edit_path(school_room.id) %></td>
         <td style="text-align:center"><%= link_to image_tag("icon_trash.png"), destroy_school_room_path(school_room.id), data: {confirm: "Esta ação não poderá mais ser desfeita. Tem certeza que deseja continuar?"} %></td>
         </td>
