--- a/SIGS/app/views/school_rooms/search_disciplines.html.erb
+++ b/SIGS/app/views/school_rooms/search_disciplines.html.erb
@@ -23,6 +23,7 @@
       <th>Cursos</th>
       <th>Nº de Vagas</th>
       <th style="text-align:center">Alocar</th>
+      <th style="text-align:center">Desalocar</th>
       <th style="text-align:center">Alterar</th>
       <th style="text-align:center">Excluir</th>
     </tr>
@@ -37,6 +38,7 @@
         </td>
         <td><%= school_room.vacancies %></td>
         <td style="text-align:center"><%= link_to image_tag("icon_alloc.png"), allocations_new_path(school_room.id) %></td>
+        <td style="text-align:center"><%= link_to image_tag("icon_alloc_red.png"), allocations_destroy_path(school_room.id) %></td>
         <td style="text-align:center"><%= link_to image_tag("icon_edit.png"), school_rooms_edit_path(school_room.id) %></td>
 				<td style="text-align:center"><%= link_to image_tag("icon_trash.png"), destroy_school_room_path(school_room.id), data: {confirm: "Esta ação não poderá mais ser desfeita. Tem certeza que deseja continuar?"} %></td>
         </td>
