--- a/SIGS/app/views/layouts/application.html.erb
+++ b/SIGS/app/views/layouts/application.html.erb
@@ -32,6 +32,7 @@
           <ul class="nav navbar-nav">
             <li><%= link_to "Minha Conta", user_edit_path(current_user) %></li>
             <li><%= link_to 'Logout', sign_out_path, method: "delete" %></li>
+            <li><%= link_to 'API TESTE', api_all_rooms_path %></li>
             <% if permission[:level] == 2 %>
               <li class="dropdown">
                 <a data-toggle="collapse" href="#salas">Salas
