Issue #70 fixed tests unit for users api and correction view show api
Signed-off-by: GesielFreitas <gesiel.was.f@gmail.com>
Signed-off-by: danielmarques28 <danielmarques7@hotmail.com>

--- a/SIGS/app/views/api_users/show.html.erb
+++ b/SIGS/app/views/api_users/show.html.erb
@@ -4,4 +4,4 @@
 <p><b>Chave:</b></p>
 <p><%= @api_user.secret %></p>
 <p><b>Token de Acesso:</b></p>
-<frame><%= @api_user.token %></frame>
+<pre><span><%= @api_user.token %></span></pre>
