issue #70: Implement acceptance test of Api User

--- a/SIGS/app/views/api_users/show.html.erb
+++ b/SIGS/app/views/api_users/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Usuário: <%= @api_user.name %></h1>
+<h1><b>Usuário:</b> <%= @api_user.name %></h1>
 <p><b>E-mail:</b></p>
 <p><%= @api_user.email %></p>
 <p><b>Chave:</b></p>
