--- a/SIGS_prototype/assets/css/style.css
+++ b/SIGS_prototype/assets/css/style.css
@@ -1,12 +1,13 @@
-/* NAV BAR COLORS
- #1c1c20: navbar background
- #1c1c20;/**/ /* navbar border
- #FFF: default color
- #EEE: hover color (#FFFFFF for .nav-brand)
- #555: active color
- #D5D5D5: active background
- #37c945: Verde Logo
-*/
+/*body background*/
+body {
+  /*background: url(../img/fundo.png);*/
+  /*background-color: #ECF0F5;*/
+}
+
+.whiteBackground {
+  background-color: white;
+}
+/*body background END*/
 
 .container.container-fluid{
   margin:0;
@@ -24,7 +25,7 @@
 }
 
 .container.container.container-fluid.myContainer:not(#signIn) {
-  width: 98vw !important;
+  width: 100vw !important;
 }
 
 .container.container-fluid .mainConteiner {
@@ -182,4 +183,84 @@
 .tableViewAllocation tr th, .tableViewAllocation tr td {
   text-align: center;
   vertical-align: middle !important;
+}
+
+/*Top Bar*/
+.topBar {
+  width: 100%;
+  height: 60px;
+  background-color: #5FBB46;
+}
+
+.topBar a.btn {
+  margin-top: 13px;
+  margin-right: 13px;
+  background-color: #000000;
+  color: #5FBB46;
+  border-color: #000000;
+}
+
+.topBar .welcomeUser {
+  height: 60px;
+  line-height: 60px;
+  margin-right: 13px;
+}
+
+/*dash board*/
+.info-box {
+    display: block;
+    min-height: 90px;
+    background: #ECF0F5;
+    width: 100%;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    border-radius: 2px;
+    margin-bottom: 15px;
+}
+
+.bg-aqua {
+    background-color: #00c0ef !important;
+}
+
+.bg-red {
+    background-color: #dd4b39 !important;
+}
+
+.bg-yellow {
+    background-color: #f39c12 !important;
+}
+
+.info-box-icon {
+    border-top-left-radius: 2px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 2px;
+    display: block;
+    float: left;
+    height: 90px;
+    width: 90px;
+    text-align: center;
+    font-size: 45px;
+    line-height: 90px;
+    background: rgba(0,0,0,0.2);
+    color: #fff !important;
+}
+
+.info-box-content {
+    padding: 5px 10px;
+    margin-left: 90px;
+}
+
+.info-box-text {
+    display: block;
+    font-size: 14px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-transform: uppercase;
+}
+
+.info-box-number {
+    display: block;
+    font-weight: bold;
+    font-size: 18px;
 }
