--- a/SIGS_prototype/assets/css/style.css
+++ b/SIGS_prototype/assets/css/style.css
@@ -37,6 +37,20 @@ body {
   background-color: #5FBB46;
 }
 
+@media (max-width: 767px) {
+  .navbar-nav .open .dropdown-menu>li>a {
+    color: #ffffff;
+  }
+  .navbar-nav .open .dropdown-menu>li>a:focus, .navbar-nav .open .dropdown-menu>li>a:hover {
+    color: #262626;
+  }
+}
+
+.welcomeUser {
+  margin-bottom: 50px;
+  text-align: right;
+}
+
 /* Sticky footer */
 
 html {
@@ -46,7 +60,7 @@ html {
 
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 60px;
+  margin-bottom: 124px;
 }
 
 .footer {
@@ -54,7 +68,7 @@ body {
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 250px;
+  height: 124px;
   background-color: #000000;
   color: #ffffff;
 }
@@ -78,6 +92,10 @@ body {
 
 .footer .myList li a:hover {
   color: #5FBB46;
+}
+
+.footer .container {
+  background-color: #000000;
 }
 /*Sticky footer END*/
 
